fix top banner z-index

--- a/css/style-akord38.css
+++ b/css/style-akord38.css
@@ -2,11 +2,6 @@
     padding-top:120px;
     z-index:99;
 }
-.hidden-fix{
-    z-index:0;
-    opacity:0;
-    transition: all 2s;
-}
 .top-banner-services {
     min-height:400px;
     background: url(../img/howitworks.png) center center no-repeat;
@@ -17,6 +12,11 @@
     margin-top: 120px;
     transition: all 2s;
   }
+.hidden-fix{
+    z-index:0!important;
+    opacity:0;
+    transition: all 2s;
+}
 .top-banner-services h1{
     position:relative;
     top: 90px;
